# value-betting-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.bot  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_xg_tables.py  003_add_model_tracking.py
src/: app.py  bot.py  config.py  telegram_alerts.py  telegram_bot.py
src/data/: loader.py
src/db/: __init__.py  models.py  session.py
src/models/: __init__.py  backtest.py  calibration.py  claude_llm.py  features.py  learning.py  poisson.py  prediction.py
src/pages/: 1_Paper_Trading.py
src/scrapers/: football_data_uk.py  odds_api.py  understat.py
src/strategies/: __init__.py  paper_trading.py  value_engine.py
tests/: test_config.py  test_dashboard_analytics.py  test_models.py  test_odds_scanner.py  test_paper_trading.py  test_prediction.py  test_telegram.py  test_value_engine.py
